--- a/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
@@ -18,7 +18,7 @@
     <link href="/gentela-gh-pages/build/css/custom.min.css" rel="stylesheet">
 </head>
 
-<body class="nav-md">
+<body class="nav-md footer_fixed">
     <div class="container body">
         <div class="main_container">
             @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
@@ -27,14 +27,14 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Fixed Sidebar <small> Just add class <strong>menu_fixed</strong></small></h3>
+                           @RenderBody()
                         </div>
                     </div>
                 </div>
             </div>
             <footer>
                 <div class="pull-right">
-                    Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                  Easy Cash Müşteri Panalie @DateTime.Now.Year
                 </div>
                 <div class="clearfix"></div>
             </footer>
