--- a/EasyCashIdentityProject.PresentationLayer/Views/CustomerLayout/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/CustomerLayout/Index.cshtml
@@ -23,18 +23,12 @@
         <div class="main_container">
             @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
             @await Component.InvokeAsync("_CustomerLayoutHeaderPartial")
-            <div class="right_col" role="main">
-                <div class="">
-                    <div class="page-title">
-                        <div class="title_left">
-                           @RenderBody()
-                        </div>
-                    </div>
-                </div>
+            <div role="main">
+                @RenderBody()
             </div>
             <footer>
                 <div class="pull-right">
-                  Easy Cash Müşteri Panalie @DateTime.Now.Year
+                    Easy Cash Müşteri Panalie @DateTime.Now.Year
                 </div>
                 <div class="clearfix"></div>
             </footer>
